--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "dependencies": {
         "body-parser": "^1.19.0",
         "bootstrap": "^4.5.3",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
-        "node-sass": "^5.0.0"
+        "node-sass": "^5.0.0",
+        "nodemailer": "^6.4.15"
     }
 }
