--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.2.0",
+        "mongoose": "^5.11.2",
         "node-sass": "^5.0.0",
         "nodemailer": "^6.4.15",
         "nodemailer-html-to-text": "^3.1.0"
